# OpenGL_task

./: CMakeLists.txt  README.md  main.cpp
